# brepent

./: .gitignore  .style.yapf  noxfile.py  setup.cfg  setup.py  test.sh
brepnet/: input_pipeline.py  input_pipeline_test.py  main.py  models.py  train.py  train_test.py
brepnet/configs/: default.py
serve/: main.py
