[metadata]
name = brepnet
version = 0.1.0
description = BRepNet implementation
long_description = file: README.md
long_description_content_type = text/markdown
author = Danil Petrov
author_email = ddbihbka@gmail.com
license = Apache 2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
project_urls =
    homepage = https://github.com/d61h6k4/brepnet

[options]
packages = find:
install_requires =
    numpy>=1.21
    absl-py >= 0.12
    tensorflow >= 2.7
    tensorflow-datasets >= 4.4
    jax >= 0.2
    flax >= 0.3
    jraph >= 0.0.2.dev0
    clu >= 0.0.6
    ml-collections >= 0.1
    optax >= 0.1
    chex >= 0.1
    tfds-fusion-360-gallery-dataset@git+https://github.com/d61h6k4/tfds-fusion-360-gallery-dataset@main
python_requires = >=3.8
